--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -37,3 +37,14 @@ jobs:
       - name: Run pre-commit hooks
         run: |
           pre-commit run --all-files
+
+      - name: Commit and push changes
+        if: success()
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git commit -m "chore: apply pre-commit fixes" || echo "no changes"
+          git push
