--- a/custom_components/dynamic_energy_calculator/manifest.json
+++ b/custom_components/dynamic_energy_calculator/manifest.json
@@ -7,6 +7,7 @@
   "documentation": "https://www.github.com/bvweerd/dynamic_energy_calculator",
   "homekit": {},
   "iot_class": "calculated",
+  "translation_key": "dynamic_energy_calculator",
   "issue_tracker": "https://github.com/bvweerd/dynamic_energy_calculator/issues",
   "quality_scale": "bronze",
   "requirements": [],
