--- a/custom_components/dynamic_energy_calculator/quality_scale.yaml
+++ b/custom_components/dynamic_energy_calculator/quality_scale.yaml
@@ -8,7 +8,7 @@ rules:
     status: exempt
     comment: |
       This integration does not poll for data.
-  brands: todo
+  brands: done
   common-modules: done
   config-flow-test-coverage: done
   config-flow: done
@@ -19,7 +19,7 @@ rules:
       No custom actions.
   docs-high-level-description: done
   docs-installation-instructions: done
-  docs-removal-instructions: todo
+  docs-removal-instructions: done
   entity-event-setup:
     status: done
   entity-unique-id: done
@@ -38,12 +38,12 @@ rules:
     comment: |
       No custom actions.
   config-entry-unloading: done
-  docs-configuration-parameters: todo
-  docs-installation-parameters: todo
-  entity-unavailable: todo
+  docs-configuration-parameters: done
+  docs-installation-parameters: done
+  entity-unavailable: done
   integration-owner: done
-  log-when-unavailable: todo
-  parallel-updates: todo
+  log-when-unavailable: done
+  parallel-updates: done
   reauthentication-flow:
     status: exempt
     comment: |
