--- a/custom_components/dynamic_energy_calculator/quality_scale.yaml
+++ b/custom_components/dynamic_energy_calculator/quality_scale.yaml
@@ -79,7 +79,7 @@ rules:
   exception-translations: todo
   icon-translations: todo
   reconfiguration-flow: done
-  repair-issues: todo
+  repair-issues: done
   stale-devices:
     status: exempt
     comment: |
