--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -51,5 +51,9 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
-          git commit -m "chore: apply pre-commit fixes" || echo "no changes"
-          git push
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: apply pre-commit fixes"
+            git push
+          fi
