Fix mypy config and address type issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -59,7 +59,7 @@ combine_as_imports = true
 
 [mypy]
 python_version = 3.12
-ignore_errors = true
+ignore_errors = false
 follow_imports = silent
 ignore_missing_imports = true
 warn_incomplete_stub = true
