--- a/.github/workflows/hacs.yml
+++ b/.github/workflows/hacs.yml
@@ -8,7 +8,10 @@ on:
     types: [published]
   schedule:
     - cron: "0 0 * * *"
-    
+
+permissions:
+  contents: read
+  
 jobs:
   validate-hacs:
     runs-on: ubuntu-latest
