--- a/.github/workflows/precommit.yml
+++ b/.github/workflows/precommit.yml
@@ -1,4 +1,4 @@
-name: Run Pre-Commit
+name: Run Code Quality Check
 
 permissions:
   contents: write
@@ -16,6 +16,7 @@ on:
 
 jobs:
   test:
+    name: "Code Quality Check"
     env:
       PYTHONPATH: .
     runs-on: ubuntu-latest
