--- a/.github/workflows/release-versioning.yml
+++ b/.github/workflows/release-versioning.yml
@@ -42,6 +42,7 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add custom_components/dynamic_energy_contract_calculator/manifest.json setup.cfg
           git commit -m "chore: bump to next version after release ${{ github.ref_name }}"
+          git pull --rebase origin main
           git push origin HEAD:main
 
   publish-release:
