--- a/.github/workflows/release-versioning.yml
+++ b/.github/workflows/release-versioning.yml
@@ -1,63 +1,36 @@
-name: Release Versioning
+name: Update Version After Release
 
 on:
-  # Trigger bij push van een tag vX.Y.Z
   push:
     tags:
       - 'v*.*.*'
-  # Trigger zodra je in de GitHub UI een Release publiceert
-  release:
-    types: [published]
 
 permissions:
   contents: write
-  
+
 jobs:
-  bump-release:
-    name: "Bump Release Version"
-    # Zorg dat we alleen in deze job de tag-push afhandelen
-    if: startsWith(github.ref, 'refs/tags/v')
+  update-version:
+    name: "Sync version in setup.cfg to released tag"
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
+      - name: Checkout main
         uses: actions/checkout@v5
         with:
           fetch-depth: 0
           ref: main
 
-      - name: Setup Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: '3.x'
+      - name: Extract version from tag
+        id: version
+        run: echo "version=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
 
-      - name: Install bump2version
-        run: pip install bump2version
+      - name: Update setup.cfg
+        run: |
+          sed -i "s/^current_version = .*/current_version = ${{ steps.version.outputs.version }}/" setup.cfg
 
-      - name: Bump version in manifest.json
-        # Gebruik --no-tag zodat we alleen het bestand bumpen voor de release
-        run: bump2version patch --allow-dirty --no-tag
-
-      - name: Commit & Push bumped files
+      - name: Commit & Push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add custom_components/dynamic_energy_contract_calculator/manifest.json setup.cfg
-          git commit -m "chore: bump to next version after release ${{ github.ref_name }}"
-          git pull --rebase origin main
+          git add setup.cfg
+          git diff --staged --quiet || git commit -m "chore: sync version to ${{ steps.version.outputs.version }} after release"
           git push origin HEAD:main
-
-  publish-release:
-    # Deze job draait na het aanmaken van de GitHub Release (event ‘published’)
-    if: github.event_name == 'release'
-    needs: bump-release
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-
-      - name: Create GitHub Release from tag
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ github.event.release.tag_name }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
