--- a/.github/workflows/release-versioning.yml
+++ b/.github/workflows/release-versioning.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - 'v*.*.*'
 
+concurrency:
+  group: update-version-main
+  cancel-in-progress: false
+
 permissions:
   contents: write
 
@@ -33,4 +37,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add setup.cfg
           git diff --staged --quiet || git commit -m "chore: sync version to ${{ steps.version.outputs.version }} after release"
+          git pull --rebase origin main
           git push origin HEAD:main
