--- a/custom_components/dynamic_energy_contract_calculator/manifest.json
+++ b/custom_components/dynamic_energy_contract_calculator/manifest.json
@@ -1,7 +1,9 @@
 {
   "domain": "dynamic_energy_contract_calculator",
   "name": "Dynamic Energy Contract Calculator",
-  "codeowners": ["@bvweerd"],
+  "codeowners": [
+    "@bvweerd"
+  ],
   "config_flow": true,
   "dependencies": [],
   "documentation": "https://www.github.com/bvweerd/dynamic_energy_contract_calculator",
@@ -11,6 +13,6 @@
   "quality_scale": "silver",
   "requirements": [],
   "ssdp": [],
-  "version": "0.0.0",
+  "version": "1.3.6",
   "zeroconf": []
 }
